--- a/README
+++ b/README
@@ -2,7 +2,8 @@
 相对于纯粹使用线性数据结构（如数组或链表）存储和查找数据，B+树通常具有更快的存储和查找时间。B+树的特点使得它在处理大量数据时表现出色。
 它具有较低的深度和更好的数据局部性，这意味着每次访问磁盘或内存时需要的I/O操作较少。此外，B+树还支持范围查询和顺序访问，这对于许多应用程序是重要的。
 
-![测试结果]()
+![单线程测试结果](test/单线程.JPG)
+![多线程测试结果](test/多线程.png)
 根据提供的代码和测试结果，我们可以对程序的性能以及测试的意义进行评估。
 
 ### 测试的意义
